# newpytrade

./: .gitignore  .replit  PyTradeAnalytics_updated.code-workspace  angular.json  bse_100.json  bse_100_symbols.txt  bse_500.json  bse_500_symbols.txt  cwp-deployment-guide.md  cwp-deployment.sh  deploy-instructions.md  deployment-checklist.md  development_config.json  development_manager.py  gitkey  gitkey.pub  gkarvindh  gkarvindh.pub  package-lock.json  package.json  prepare-deployment.sh  proxy.conf.json  pyproject.toml  pytrade.service  pytrade_nginx.conf  replit.nix  requirements-deploy.txt  requirements.txt  run_services.py  service-deployment-guide.md  setup_pytrade_service.sh  tailwind.config.js  tsconfig.json
.pids/: port_config.json
attached_assets/: __init__.py  app.py  chartprediction.py  chartprediction_simplified.py  cleanup_project.py  fetchstockdata.py  fundamental.py  google_auth.py  gunicorn_config.py  indicatorscharts.py  indicesdownload.py  main.py  pandas_ta_patch.py  pytrade.py  run_services.py  setup.py  shorttermswingtrading.py  simplified_pytrade.py  simplified_pytrade.py.backup  stock_data_manager_updated.py  swing_trading.py  swing_trading_service.py  top_stocks_endpoint.py  updated_bse_gen.py  utils_temp.py  websocket_config.json  websocket_server.py  wsgi.py
attached_assets/analysis/: correlation.py
attached_assets/cache/: index_history_CAC_40_1mo.json  index_history_Euro_Stoxx_50_1mo.json  index_history_FTSE_100_1mo.json  (+4 more)
src/: index.html  main.ts  polyfills.ts  styles-fixes.css  styles.scss
static/: index.html
(+110 files in other folders)
